# pouch2

./: .gitlab-ci.yml  .gitmodules
docs/: device_comparison.ods  specifications.md
lab/: 2024-11-11_i2c_acceleration.csv  get_current.py  timings.md  visualize_log.ipynb
pcb/: README.md  accel_gyro.kicad_sch  fp-lib-table  hmi.kicad_sch  io_expander.kicad_sch  pouch2.kicad_pcb  pouch2.kicad_prl  pouch2.kicad_sch  power.kicad_sch  sd_card.kicad_sch  sim868_module.kicad_sch
pcb/lib/L86-M33/L86-M33.pretty/: XCVR_L86-M33.kicad_mod
pcb/manufacturing/: order_options.txt
pouch2/: accel_gyro.kicad_sch  bom_orders.txt  eink_display.kicad_sch  fp-info-cache  fp-lib-table  gps.kicad_sch  hmi.kicad_sch  pi_zero.kicad_sch  pouch2.csv  pouch2.kicad_pcb  pouch2.kicad_prl  pouch2.kicad_pro  pouch2.kicad_sch  power.kicad_sch  sd_card.kicad_sch  sim868_module.kicad_sch  sym-lib-table  ~pouch2.kicad_sch.lck
pouch2/lib/custom/: SensorBoards.bak  SensorBoards.kicad_sym
pouch2/lib/custom/SensorBoards.pretty/: 18650_Keystone_1043.kicad_mod  DEBO_GPS.kicad_mod  DEBO_MPU6050.kicad_mod  DEBO_SD-Card.kicad_mod  Raspberry_Pi_Zero_Socket_wo_drills.kicad_mod
src/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  PouchTasker.cpp  PouchTasker.h  README.md  build.sh  debug.sh  main.cpp  main_wifi.cpp  upload.sh  upload_via_ocd.sh
src/lib/Hardware/: Acceleration_MPU6050_Sensor.cpp  Acceleration_MPU6050_Sensor.h  Environment_BME280_Sensor.cpp  Environment_BME280_Sensor.h  GPS_NMEA.cpp  GPS_NMEA.h  I2C_Bus.cpp  I2C_Bus.h  SDCardSocket.cpp  SDCardSocket.h
src/lib/Interfaces/: IAccelerationSensor.h  IEnvironmentalSensor.h  IFileIO.h  IGlobalNavSatSystem.h  II2C.h
src/lib/Simulators/: SimAccelerationSensor.cpp  SimAccelerationSensor.h
